[gd_scene load_steps=6 format=3 uid="uid://c7w84b7bmhi4v"]

[ext_resource type="Texture2D" uid="uid://bikykts0p4a6x" path="res://assets/gfx/name_dex/star_icon.png" id="2_jniw0"]
[ext_resource type="Script" uid="uid://dma88saxhjjp5" path="res://src/ui/menus/dex/dex_entry.gd" id="2_p6hcx"]
[ext_resource type="Texture2D" uid="uid://bvam6cu1o8dp8" path="res://assets/gfx/name_dex/checkbox_ticked.png" id="3_iofrn"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_iofrn"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(1, 0.94509804, 0.9098039, 1)
anti_aliasing = false

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_jniw0"]

[node name="DexEntry" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_iofrn")
script = ExtResource("2_p6hcx")

[node name="ColourBackground" type="ColorRect" parent="."]
unique_name_in_owner = true
layout_mode = 2
color = Color(1, 0, 0.3019608, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="ShapeTexture" type="TextureRect" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("2_jniw0")
stretch_mode = 2

[node name="VSeparator" type="VSeparator" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 1
theme_override_styles/separator = SubResource("StyleBoxEmpty_jniw0")

[node name="NameLabel" type="Label" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "John Smithsonian"

[node name="VSeparator3" type="VSeparator" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 1
theme_override_styles/separator = SubResource("StyleBoxEmpty_jniw0")

[node name="RarityTexture" type="TextureRect" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("2_jniw0")
stretch_mode = 2

[node name="VSeparator2" type="VSeparator" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 59
theme_override_styles/separator = SubResource("StyleBoxEmpty_jniw0")

[node name="CheckboxTexture" type="TextureRect" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 4
texture = ExtResource("3_iofrn")
stretch_mode = 2
